# guiguigui

./: .gitignore  README.md  RELEASING.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic_operations.py
guiguigui/backend/: __init__.py  macos.py  x11.py
tests/integration/: test_keyboard_operations.py  test_x11_integration.py
tests/platform/: test_macos_backend.py  test_x11_backend.py
