[project]
name = "guiguigui"
version = "0.1.0"
description = "A minimalist cross-platform GUI automation library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "PyGUI Team" }
]
keywords = [
    "gui",
    "automation",
    "mouse",
    "keyboard",
    "window",
    "cross-platform",
    "macos",
    "linux",
    "windows",
    "macro",
    "clipboard",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sdpkjc/PyGUI"
Repository = "https://github.com/sdpkjc/PyGUI"
Issues = "https://github.com/sdpkjc/PyGUI/issues"
Changelog = "https://github.com/sdpkjc/PyGUI/blob/main/CHANGELOG.md"
Documentation = "https://github.com/sdpkjc/PyGUI#readme"

[project.optional-dependencies]
macos = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
]
linux = [
    "python-xlib>=0.33",
]
windows = []

dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pygui"]

[tool.hatch.build.targets.sdist]
include = [
    "/pygui",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E741", # ambiguous variable name (I, O in Key enum are intentional)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pygui.core.window"
disable_error_code = ["valid-type"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require actual GUI operations)",
    "slow: marks tests as slow running",
]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pygui"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
